--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+def dbflow_version = "3.1.1"
 
 android {
     compileSdkVersion 24
@@ -20,6 +23,11 @@ android {
 }
 
 dependencies {
+
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'commons-io:commons-io:2.4'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
